[EDX-102] correct spacing on code text element (#1385)
* Fix whitespace appearing in table elements to avoid entering quirks mode

also remove dynamic(ish) className in Code.js

* Update Code text spacing

also, add updates necessary to avoid cascading changes to site appearance.

* [EDX-91] version menu styling (#1376)

* Rework react-select menu to remove unneeded features
* Bring styles in line with design library
* Improve spacing on warning sign
* Rebased (#1386)


* Refactor Sidebar to use TypeScript

Replace EXPAND_MENU const with true TypeScript enum.

* Add TypeScript to RightSidebar

* Pull from main again

* Move prop types inline in sidebar files

* Made title compulsory (#1394)

* Made title compulsory

* Made title optional

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,56 +13,19 @@
 
 @layer base {
     body {
+      font-family: NEXT Book,Arial,Helvetica,sans-serif;
       margin: 0;
       font-weight: 500;
       font-size: 17px;
       line-height: 28px;
-      font-family: 'Museo Sans', 'Helvetica Neue', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-        Ubuntu, Cantarell, 'Open Sans', sans-serif;
       color: #161616;
       -webkit-font-smoothing: antialiased;
       min-width: 320px;
     }
-  
-    @font-face {
-      font-family: 'Museo Sans';
-      font-weight: 300;
-      font-display: swap;
-      src: url('../fonts/museosans/300/webfont.woff2') format('woff2'),
-        url('../fonts/museosans/300/webfont.woff') format('woff');
-    }
-  
-    @font-face {
-      font-family: 'Museo Sans';
-      font-weight: 500;
-      font-display: swap;
-      src: url('../fonts/museosans/500/webfont.woff2') format('woff2'),
-        url('../fonts/museosans/500/webfont.woff') format('woff');
-    }
-  
-    @font-face {
-      font-family: 'Museo Sans';
-      font-weight: 500;
-      font-style: italic;
-      font-display: swap;
-      src: url('../fonts/museosans/500italic/webfont.woff2') format('woff2'),
-        url('../fonts/museosans/500italic/webfont.woff') format('woff');
-    }
-  
-    @font-face {
-      font-family: 'Museo Sans';
-      font-weight: 700;
-      font-display: swap;
-      src: url('../fonts/museosans/700/webfont.woff2') format('woff2'),
-        url('../fonts/museosans/700/webfont.woff') format('woff');
-    }
-  
-    @font-face {
-      font-family: 'Museo Sans';
-      font-weight: 900;
-      font-display: swap;
-      src: url('../fonts/museosans/900/webfont.woff2') format('woff2'),
-        url('../fonts/museosans/900/webfont.woff') format('woff');
+
+    code {
+      font-family: inherit;
+      font-weight: inherit;
     }
   
     /* LEGAL DISCLAIMER
